@@ -1,0 +1,2 @@
+# set of available languages (in alphabetic order)
+ca de el en_GB es eu fi fr ja pt_BR
